Bug 70930 - zoom effect doesn't complete immediately
Summary: zoom effect doesn't complete immediately
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-27 19:03 UTC by Emilio Pozuelo Monfort
Modified: 2013-10-30 16:07 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Emilio Pozuelo Monfort 2013-10-27 19:03:52 UTC
(I think this is a long time known bug but I don't see a bug for it)

With animation=zoom in weston.ini, when a window is opened it zooms in, but the zoom is not complete and seems to stop at 99% or so, showing fuzziness (not sure if that's the proper English word). You need to move the mouse (or sometimes wait a second or two) for the window to get zoomed to 100%.
Comment 1 Kristian Høgsberg 2013-10-30 16:06:47 UTC
I see the issue, and no, I didn't know about that one.  (fuzziness sounds like the right word to me, btw)
Comment 2 Kristian Høgsberg 2013-10-30 16:06:47 UTC
I see the issue, and no, I didn't know about that one.  (fuzziness sounds like the right word to me, btw)
Comment 3 Kristian Høgsberg 2013-10-30 16:07:21 UTC
commit 90dfb11428f233ae7a8a455dc773099c80bb5287
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Wed Oct 30 09:07:04 2013 -0700

    animation.c: Schedule a repaint when the animation is done
    
    Otherwise we don't repaint with the final state of the surface and
    we're stuck with the second-to-last frame of the animation until
    something else (moving the mouse or such) triggers a redraw.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=70930


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.