src/animation.c
@@ -167,6 +167,7 @@ weston_view_animation_frame(struct weston_animation *base,
 	weston_spring_update(&animation->spring, msecs);
 
 	if (weston_spring_done(&animation->spring)) {
+		weston_view_schedule_repaint(animation->view);
 		weston_view_animation_destroy(animation);
 		return;
 	}
